--- a/wishlist.html
+++ b/wishlist.html
@@ -84,7 +84,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">New arrival</a>
+                        <a class="nav-link active" aria-current="page" href="./arrival.html">New arrival</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -279,7 +279,7 @@
                         </div>
                     </div>
                     <div class="copyRiht text-end mt-4 cust-Sml-font">
-                        @ 2021 Chirag Jewellers. All Rights Reserved
+                        @ 2022 Chirag Jewellers. All Rights Reserved
                     </div>
                 </div>
             </div>
