--- a/arrival.html
+++ b/arrival.html
@@ -1,35 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chirag - Product</title>
+    <title>Chirag - Arrival</title>
 
-    <!-- fontawsome  -->
-    <script src="https://kit.fontawesome.com/a16f8ee6e2.js" crossorigin="anonymous"></script>
+      <!-- fontawsome  -->
+      <script src="https://kit.fontawesome.com/a16f8ee6e2.js" crossorigin="anonymous"></script>
 
-    <!-- bootstrap  -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
-
-    <!-- owlcursol  -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
-        integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
-        integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-
-    <!-- custom  -->
-    <link rel="stylesheet" href="style.css">
+      <!-- bootstrap  -->
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+          integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+          crossorigin="anonymous"></script>
+  
+      <!-- owlcursol  -->
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
+          integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
+          crossorigin="anonymous" referrerpolicy="no-referrer" />
+      <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
+          integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
+          crossorigin="anonymous" referrerpolicy="no-referrer" />
+  
+      <!-- custom  -->
+      <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
     <div class="wholeHeader headerNotHomeWhole" id="wholeHeader">
         <div class="upperHeader">
@@ -114,77 +112,167 @@
         </div>
     </div>
 
-    <section class="productDetails mt-5">
+    <div class="ring-upper-txt text-center mt-5">
+        <h2 class="allHeading">
+            New
+            <span class="sliderAlFnt">Arrivals</span>
+        </h2>
+        <div class="container">
+            <p class="fadeTxtColorAll pt-2">Underprinned by our heritage, our curated collection of ethically sourced natural diamond rings have their own story to tell. Whether given with intent – from promise rings to eternity rings – or expression of individual spirit,</p>
+        </div>
+    </div>
+
+    <section class="ring-product mt-5 mb-5">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 col-md-12 col-sm-12">
-                    <div class="prodDetUImg">
-                        <img src="img/ring/product-1.png" class="img-fluid" id="Product-Imge-Main">
+                <div class="col-lg-4 col-md-6 col-sm-12 perProduct-Ring">
+                    <div class="ring-per-imags">
+                        <img src="img/ring/product-1.png" class="img-fluid">
                     </div>
-                    <div class="other-product-of-prodDet pt-2">
-                        <div class="prod-det-other" id="0" onclick="ProdDetailImgChange(this.id)">
-                            <img src="img/ring/product-1.png" class="img-fluid">
+                    <div class="ring-down-txt mt-2">
+                        <div class="ringTxt">
+                            <p class="ringLrg-txt p-0 m-0">
+                                ARPEGGIA 18AB56O
+                            </p>
+                            <p class="ringSmml-txt p-0 m-0">Rs. 1,00,000</p>
                         </div>
-                        <div class="prod-det-other" id="1" onclick="ProdDetailImgChange(this.id)">
-                            <img src="img/ring/product-2.png" class="img-fluid">
-                        </div>
-                        <div class="prod-det-other" id="2" onclick="ProdDetailImgChange(this.id)">
-                            <img src="img/ring/product-3.png" class="img-fluid">
-                        </div>
-                        <div class="prod-det-other" id="3" onclick="ProdDetailImgChange(this.id)">
-                            <img src="img/ring/product-4.png" class="img-fluid">
-                        </div>
-                        <div class="prod-det-other" id="4" onclick="ProdDetailImgChange(this.id)">
-                            <img src="img/ring/product-2.png" class="img-fluid">
-                        </div>
-                        <div class="prod-det-other" id="5" onclick="ProdDetailImgChange(this.id)">
-                            <img src="img/ring/product-3.png" class="img-fluid">
+                        <div class="ringWCIcon">
+                            <span class="ringWish"><img src="img/fav.png"></span>
+                            <span class="ringCart"><img src="img/cart.png"></span>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 col-md-12 col-sm-12 prodDetleftBox">
-                    <p class="prodDetLargetxt txtFadedAll mb-0 mt-5">
-                        Diamond ring (R-445)
-                    </p>
-                    <div class="smlTxtprodDet txtFadedAll mb-3">Rs. 204,000.00</div>
-                    <p class="txtFadedAll pt-2">The price mentioned is exclusive of 3% goods and services tax. <br>
-                        Description : Diamond Colour – EF | Diamond Clarity – VVS
-                    </p>
-                    <div class="prodDetSize mt-4 txtFadedAll">
-                        <p class="m-0">Size</p>
-                        <div class="sizeBoxProd mt-4">
-                            <span class="ProdSizeBtn">45</span>
-                            <span class="ProdSizeBtn">46</span>
-                            <span class="ProdSizeBtn">47</span>
-                            <span class="ProdSizeBtn">48</span>
-                            <span class="ProdSizeBtn">49</span>
-                            <span class="ProdSizeBtn">50</span>
-                            <span class="ProdSizeBtn">51</span>
-                            <br>
-                            <span class="ProdSizeBtn">52</span>
-                            <span class="ProdSizeBtn">53</span>
-                            <span class="ProdSizeBtn">54</span>
-                            <span class="ProdSizeBtn">55</span>
+                <div class="col-lg-4 col-md-6 col-sm-12 perProduct-Ring">
+                    <div class="ring-per-imags">
+                        <img src="img/ring/product-2.png" class="img-fluid">
+                    </div>
+                    <div class="ring-down-txt mt-2">
+                        <div class="ringTxt">
+                            <p class="ringLrg-txt p-0 m-0">
+                                ARPEGGIA 18AB56O
+                            </p>
+                            <p class="ringSmml-txt p-0 m-0">Rs. 1,00,000</p>
                         </div>
-                        <div class="prodDetQty mt-2">
-                            <div class="qtyTxt">
-                                Qty: 
-                            </div>
-                            <div class="QtyChange-box">
-                                <span id="ProdDetQtyNum">1</span>
-                                <span class="QtyLogoProdDet"><i class="fas fa-sort-down"></i></span>
-                            </div>
+                        <div class="ringWCIcon">
+                            <button class="btns">Request for price</button>
                         </div>
-                        <div class="prodDetaiButton mt-4">
-                            <div class="PerProdDet-button">
-                                <button class="btns">Wishlist</button>
-                            </div>
-                            <div class="PerProdDet-button">
-                                <button class="btns">Add to cart</button>
-                            </div>
-                            <div class="PerProdDet-button">
-                                <button class="btns">Buy now</button>
-                            </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 perProduct-Ring">
+                    <div class="ring-per-imags">
+                        <img src="img/ring/product-3.png" class="img-fluid">
+                    </div>
+                    <div class="ring-down-txt mt-2">
+                        <div class="ringTxt">
+                            <p class="ringLrg-txt p-0 m-0">
+                                ARPEGGIA 18AB56O
+                            </p>
+                            <p class="ringSmml-txt p-0 m-0">Rs. 1,00,000</p>
+                        </div>
+                        <div class="ringWCIcon">
+                            <span class="ringWish"><img src="img/fav.png"></span>
+                            <span class="ringCart"><img src="img/cart.png"></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 perProduct-Ring">
+                    <div class="ring-per-imags">
+                        <img src="img/ring/product-4.png" class="img-fluid">
+                    </div>
+                    <div class="ring-down-txt mt-2">
+                        <div class="ringTxt">
+                            <p class="ringLrg-txt p-0 m-0">
+                                ARPEGGIA 18AB56O
+                            </p>
+                            <p class="ringSmml-txt p-0 m-0">Rs. 1,00,000</p>
+                        </div>
+                        <div class="ringWCIcon">
+                            <span class="ringWish"><img src="img/fav.png"></span>
+                            <span class="ringCart"><img src="img/cart.png"></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 perProduct-Ring">
+                    <div class="ring-per-imags">
+                        <img src="img/ring/product-5.png" class="img-fluid">
+                    </div>
+                    <div class="ring-down-txt mt-2">
+                        <div class="ringTxt">
+                            <p class="ringLrg-txt p-0 m-0">
+                                ARPEGGIA 18AB56O
+                            </p>
+                            <p class="ringSmml-txt p-0 m-0">Rs. 1,00,000</p>
+                        </div>
+                        <div class="ringWCIcon">
+                            <span class="ringWish"><img src="img/fav.png"></span>
+                            <span class="ringCart"><img src="img/cart.png"></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 perProduct-Ring">
+                    <div class="ring-per-imags">
+                        <img src="img/ring/product-6.png" class="img-fluid">
+                    </div>
+                    <div class="ring-down-txt mt-2">
+                        <div class="ringTxt">
+                            <p class="ringLrg-txt p-0 m-0">
+                                ARPEGGIA 18AB56O
+                            </p>
+                            <p class="ringSmml-txt p-0 m-0">Rs. 1,00,000</p>
+                        </div>
+                        <div class="ringWCIcon">
+                            <span class="ringWish"><img src="img/fav.png"></span>
+                            <span class="ringCart"><img src="img/cart.png"></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 perProduct-Ring">
+                    <div class="ring-per-imags">
+                        <img src="img/ring/product-7.png" class="img-fluid">
+                    </div>
+                    <div class="ring-down-txt mt-2">
+                        <div class="ringTxt">
+                            <p class="ringLrg-txt p-0 m-0">
+                                ARPEGGIA 18AB56O
+                            </p>
+                            <p class="ringSmml-txt p-0 m-0">Rs. 1,00,000</p>
+                        </div>
+                        <div class="ringWCIcon">
+                          <button class="btns">Request for price</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 perProduct-Ring">
+                    <div class="ring-per-imags">
+                        <img src="img/ring/product-6.png" class="img-fluid">
+                    </div>
+                    <div class="ring-down-txt mt-2">
+                        <div class="ringTxt">
+                            <p class="ringLrg-txt p-0 m-0">
+                                ARPEGGIA 18AB56O
+                            </p>
+                            <p class="ringSmml-txt p-0 m-0">Rs. 1,00,000</p>
+                        </div>
+                        <div class="ringWCIcon">
+                            <span class="ringWish"><img src="img/fav.png"></span>
+                            <span class="ringCart"><img src="img/cart.png"></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 perProduct-Ring">
+                    <div class="ring-per-imags">
+                        <img src="img/ring/product-5.png" class="img-fluid">
+                    </div>
+                    <div class="ring-down-txt mt-2">
+                        <div class="ringTxt">
+                            <p class="ringLrg-txt p-0 m-0">
+                                ARPEGGIA 18AB56O
+                            </p>
+                            <p class="ringSmml-txt p-0 m-0">Rs. 1,00,000</p>
+                        </div>
+                        <div class="ringWCIcon">
+                            <span class="ringWish"><img src="img/fav.png"></span>
+                            <span class="ringCart"><img src="img/cart.png"></span>
                         </div>
                     </div>
                 </div>
@@ -192,11 +280,12 @@
         </div>
     </section>
 
-    <section class="producySlider mt-5 mb-5">
+
+    <section class="producySlider mt-5 mb-5 pt-5">
         <div class="sliderHead text-center mb-5 mt-5">
             <h2 class="allHeading">
-                <span class="sliderAlFnt">Trending</span>
-                Ring
+                Explore
+                <span class="sliderAlFnt">Categories</span>
             </h2>
         </div>
         <div class="container">
@@ -205,28 +294,21 @@
                     <div class="item">
                         <a href="#">
                             <div class="prodImg">
-                                <img src="img/ring/product-1.png" alt="">
+                                <img src="img/nacklace.png" alt="">
                             </div>
                         </a>
                     </div>
                     <div class="item">
                         <a href="#">
                             <div class="prodImg">
-                                <img src="img/ring/product-2.png" alt="">
+                                <img src="img/earrings.png" alt="">
                             </div>
                         </a>
                     </div>
                     <div class="item">
                         <a href="#">
                             <div class="prodImg">
-                                <img src="img/ring/product-3.png" alt="">
-                            </div>
-                        </a>
-                    </div>
-                    <div class="item">
-                        <a href="#">
-                            <div class="prodImg">
-                                <img src="img/ring/product-4.png" alt="">
+                                <img src="img/Bracelet.png" alt="">
                             </div>
                         </a>
                     </div>
@@ -340,8 +422,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
         integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
     <script>
-        window.addEventListener('scroll', () => {
+          window.addEventListener('scroll', () => {
             let wholeHeader = document.querySelector('.wholeHeader');
             let headerImgJs = document.getElementById('headerImgJs');
             let headerImg2Js = document.getElementById('headerImg2Js');
@@ -354,28 +437,6 @@
 
             let scroll = document.documentElement.scrollTop;
             scrollTop.classList.toggle('active', scroll >= 200);
-        });
-
-        let ProdImgId = document.getElementById('Product-Imge-Main');
-        let imgArr = ['img/ring/product-1.png', 'img/ring/product-2.png', 'img/ring/product-3.png', 'img/ring/product-4.png', 'img/ring/product-2.png', 'img/ring/product-3.png'];
-        function ProdDetailImgChange(id){
-            imgArr.forEach((e,i)=>{
-                if(id == i){
-                    ProdImgId.src = e;
-                }
-            });
-        }
-
-        let ProdSizeBtn = document.querySelectorAll('.ProdSizeBtn');
-        ProdSizeBtn.forEach((elem)=>{
-            elem.addEventListener('click', ()=>{
-                ProdSizeBtn.forEach((elem2)=>{
-                    if(elem != elem2){
-                        elem2.classList.remove('active');
-                    }
-                })
-                elem.classList.add('active');
-            })
         });
     </script>
 
@@ -395,7 +456,7 @@
                     items: 1
                 },
                 1000: {
-                    items: 4
+                    items: 3
                 }
             }
         })
@@ -408,5 +469,4 @@
     </script>
 
 </body>
-
 </html>
